@@ -1,3 +1,4 @@
+* Allow to configure sale lines/remainder milestones on confirm sale
 * Fix invoice duplication
 * Only relate milestone with sale lines of type line
 
